# Trace-Pilot

./: pyproject.toml
data/mock/scenarios/order_api_500_after_release/: alerts.json  changes.json  cmdb.json  logs.jsonl  metrics.csv  runbooks.md  tickets.json
data/mock/scenarios/payment_timeout_db_saturation/: alerts.json  changes.json  cmdb.json  logs.jsonl  metrics.csv  runbooks.md  tickets.json
docs/: api_contract.md  mock_data_format.md  module4_orchestrator_flow.md  phase1_progress.md
src/tracepilot/: __init__.py  main.py
src/tracepilot/adapters/: __init__.py  base.py  exceptions.py  mock_data.py  models.py
src/tracepilot/api/: __init__.py  routes.py
src/tracepilot/domain/: __init__.py  enums.py  models.py  state.py
src/tracepilot/graph/: __init__.py  main_graph.py  nodes.py
src/tracepilot/schemas/: __init__.py  health.py  investigation.py
src/tracepilot/services/: __init__.py  investigation_service.py
src/tracepilot/tools/: __init__.py  builtins.py  models.py  registry.py
tests/: test_api.py  test_main_graph.py  test_mock_adapters.py  test_tools.py
